# distributed-computing

./: .gitignore  CMakeLists.txt  main  main2  mandelbrot_timing_results.csv  monte_carlo_results.csv  rwlock_results.csv  serial_times.txt
lab1/: CMakeLists.txt  main.c  main_mandelbrot.c  main_monte_carlo.c  main_rwlock.c  mandelbrot.c  monte_carlo.c  monte_carlo_results.csv
lab1/headers/: custom_rwlock.h  mandelbrot.h  monte_carlo.h  pth_ll_rwl.h
lab1/task3/: custom_rwlock.c  main.c  my_rand.c  pth_ll_rwl.c
lab2/: CMakeLists.txt  by_block  by_block.c  by_rows.c
lab2/task1/: by_block.c  by_cols.c  by_rows.c  serial_times_by_cols.txt  serial_times_by_rows.txt
lab2/task2/: algorithm_data.csv  cannon.c
